# dealer-contract

./: Cargo.toml  Makefile  README.md
dealer/: Cargo.toml  Makefile
dealer/src/: lib.rs  test.rs
player/: Cargo.toml
player/src/: lib.rs  test.rs
