[workspace]
resolver = "2"

members = ["dealer", "player"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.4.3"
git = "https://github.com/jayz22/rs-soroban-sdk"
rev = "2f65876"

[patch."https://github.com/jayz22/rs-soroban-sdk"]
soroban-sdk ={ path = "../rs-soroban-sdk/soroban-sdk"}